# Term-Project

./: .gitignore  CMakeLists.txt  CODEOWNERS  Doxyfile  README.md  lexer.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  main.yml
docs/: SDP-PROC-2026-02-11.drawio
docs/meetings/: MEETING-2026-02-03.md  MEETING-2026-02-10.md  MEETING-2026-02-17.md  MEETING-2026-02-24.md  MEETING-2026-03-03.md  MEETING-2026-03-10.md  MEETING-2026-03-31.md
include/cli/: cli.hpp  def_cli.hpp
include/core/: engine.hpp
include/err/: debug.hpp
include/eval/: evaluator.hpp
include/lexer/: def_token.hpp  lexer.dox  lexer.hpp
include/parse/: def_ast.hpp  parser.dox  parser.hpp
include/reg/: def_const.hpp  def_funct.hpp  def_operator.hpp  def_value.hpp  math.hpp  registry.dox  registry.hpp  token.hpp
src/: main.cpp
src/cli/: cli.cpp
src/err/: debug.cpp
src/lexer/: lexer.cpp
src/parse/: parser.cpp  parser.hpp
src/reg/: math.cpp  registry.cpp
tests/: test_cli.cpp  test_registry.cpp  tests.dox
